tests/data/appprotect/dataguard-alarm-transparent.yaml
apiVersion: appprotect.f5.com/v1beta1
kind: APPolicy
metadata: 
  name: dataguard-alarm-transparent
spec:
  policy:
    applicationLanguage: utf-8
    blocking-settings:
      violations:
      - alarm: true
        block: false
        name: VIOL_DATA_GUARD
    data-guard:
      creditCardNumbers: true
      enabled: true
      enforcementMode: ignore-urls-in-list
      enforcementUrls: []
      lastCcnDigitsToExpose: 4
      lastSsnDigitsToExpose: 4
      maskData: true
      usSocialSecurityNumbers: true
    enforcementMode: transparent 
    name: dataguard-alarm
    template: 
      name: POLICY_TEMPLATE_NGINX_BASE
