tests/data/appprotect/logconf.yaml
apiVersion: appprotect.f5.com/v1
kind: APLogConf
metadata: 
  name: logconf
spec:
  content: 
    format: default
    max_message_size: 64k
    max_request_size: any
  filter: 
    request_types: all
